@@ -1,6 +1,6 @@
 # exception_data.pm: details of the exception hierarchy used by Xapian.
 #
-# Copyright (C) 2003,2004,2006,2007,2008,2009,2011 Olly Betts
+# Copyright (C) 2003,2004,2006,2007,2008,2009,2011,2012 Olly Betts
 # Copyright (C) 2007 Richard Boulton
 #
 # This program is free software; you can redistribute it and/or
@@ -189,5 +189,23 @@ errorclass(18, 'RangeError', 'RuntimeError', <<'DOC');
 /** RangeError indicates an attempt to access outside the bounds of a container.
  */
 DOC
+
+sub for_each_nothrow {
+    my $func = shift @_;
+    my $class = '';
+    foreach my $header ('include/xapian.h', <include/xapian/*.h>) {
+	open H, '<', $header or die $!;
+	while (<H>) {
+	    if (/^\s*class\s+XAPIAN_VISIBILITY_DEFAULT\s+(\w+)/) {
+		$class = "$1::";
+		next;
+	    }
+	    if (/^[^#]*\bXAPIAN_NOTHROW\((.*)\)/) {
+		&$func("Xapian::$class::$1");
+	    }
+	}
+	close H;
+    }
+}
 
 1;
