@@ -10,6 +10,7 @@ inc_HEADERS =\
 	include/xapian.h
 
 xapianinclude_HEADERS =\
+	include/xapian/attributes.h\
 	include/xapian/compactor.h\
 	include/xapian/database.h\
 	include/xapian/dbfactory.h\
